--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -37,11 +37,11 @@
                             </p:outputPanel>
                         </f:facet>
 
-                        <p:column filterBy="#{user.systemUserId}" headerText="User Id"  width="10px" filterMatchMode="contains">
-                            <h:outputText value="#{user.systemUserId}" />
+                        <p:column filterBy="#{user.systemUserId}" headerText="User Id"  width="80" filterMatchMode="contains">                         
+                            <h:outputText value="#{user.systemUserId}"/>
                         </p:column>
-                        <p:column filterBy="#{user.salution}" headerText="Salutation"  filterMatchMode="contains">
-                            <h:outputText value="#{user.salution}" />
+                        <p:column filterBy="#{user.salution}" headerText="Salutation" width="100" filterMatchMode="contains">
+                            <h:outputText value="#{user.salution}" style="width:60px"/>
                         </p:column>
                         <p:column filterBy="#{user.firstName}" headerText="First Name"  filterMatchMode="contains">
                             <h:outputText value="#{user.firstName}" />
@@ -49,8 +49,8 @@
                         <p:column filterBy="#{user.lastName}" headerText="Last Name"  filterMatchMode="contains">
                             <h:outputText value="#{user.lastName}" />
                         </p:column>
-                        <p:column filterBy="#{user.emailAddress}" headerText="Email Address" width="200px" filterMatchMode="contains">
-                            <h:outputText value="#{user.emailAddress}"/>
+                        <p:column filterBy="#{user.emailAddress}" headerText="Email Address" width="300" filterMatchMode="contains">
+                            <h:outputText value="#{user.emailAddress}" style="width:280px;"> </h:outputText>
                         </p:column>
                         <p:column filterBy="#{user.credit}" headerText="Credit"  filterMatchMode="contains">
                             <h:outputText value="#{user.credit}" />
