--- a/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
@@ -30,7 +30,7 @@
                             </p:outputPanel>
                         </f:facet>
 
-                        <p:column filterBy="#{company.companyId}" headerText="ID" width="80" filterStyle="width:50px" filterMatchMode="contains">
+                        <p:column filterBy="#{company.companyId}" headerText="Company ID" width="130" filterStyle="width:50px" filterMatchMode="contains">
                             <h:outputText value="#{company.companyId}" />
                         </p:column>
 
