--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -24,10 +24,9 @@
 
             <p:layout style="min-width:400px;min-height:1000px; borderless">      
                 <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
-
                     <p:menu>
                         <p:submenu label =" Manage Your Warehouse">
-                            <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                            <p:menuitem value="HOME" url="wmsindex.xhtml" />
                             <p:submenu label="Warehouse" >
                                 <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
                                 <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
@@ -42,21 +41,25 @@
                             </p:submenu>
                         </p:submenu>
                     </p:menu>
-
                 </p:layoutUnit>
 
                 <p:layoutUnit position="center">   
                     <p:panel header="Welcome">
 
-                        Welcome to WMS system!
+                        Welcome to WMS System!
+                        <Br/><Br/>
+                        With WMS, you can manage your organization’s warehousing processes with ease.
                         <Br/><Br/><Br/>
-                        WMS system empowers your organization to: 
+                        WMS System empowers your organization to:
                         <Br/><Br/>
-                        Say HI!
+                        1. Manage your warehouse
                         <Br/><Br/>
-                        Here and there
+                        2. Perform receiving and putaway
                         <Br/><Br/>
-                        lalala :D
+                        3. Perform fulfillment of orders
+                        <Br/><Br/>
+                        4. Manage goods flow within your warehouse and between your warehouses 
+
                     </p:panel>
                 </p:layoutUnit>
             </p:layout>
