--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetype.xhtml
@@ -69,7 +69,7 @@
                         </p:outputPanel>
                     </f:facet>
 
-                    <p:ajax event="rowEdit" listener="#{storageTypeViewEditManagedBean.onRowEdit}"/>
+                    <p:ajax event="rowEdit" listener="#{storageTypeViewEditManagedBean.onRowEdit}" />
                     <p:ajax event="rowEditCancel" listener="#{storageTypeViewEditManagedBean.onRowCancel}"/>                
 
                     <p:column headerText="Warehouse Id" >
@@ -93,8 +93,8 @@
                         </p:cellEditor>
                     </p:column>
 
-                    <p:column headerText = "Delete Storage Type">
-                        <p:commandButton action="#{storageTypeViewEditManagedBean.deleteStorageType(storagetype)}" update="storagetypeData" value="Delete">
+                    <p:column style="width:42px">
+                        <p:commandButton action="#{storageTypeViewEditManagedBean.deleteStorageType(storagetype)}" update="storagetypeData" icon = "ui-icon-trash">
                             <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this storage bin?" icon="ui-icon-alert" />
                         </p:commandButton> 
                         <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
@@ -103,7 +103,7 @@
                         </p:confirmDialog>
                     </p:column>
 
-                    <p:column style="width:32px">
+                    <p:column style="width:42px"">
                         <p:rowEditor />
                     </p:column>
 
