--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastResult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastResult.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">  
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">  
     <h:head>
         <title>Forecast Result</title>
         <style type="text/css">
@@ -42,10 +43,9 @@
                 </p:submenu>
             </p:megaMenu>
 
-            <p:panel header="View Forecast Result" style="margin-bottom:10px;">
-              <p:chart type="line" model="#{forecastShowHistoryManagedBean.forecastSales}" style="height:300px" />
-            </p:panel>
-
+                <p:panel header="View Forecast Result" style="margin-bottom:10px;">
+                    <p:chart type="line" model="#{forecastShowHistoryManagedBean.forecastSales}" style="height:300px" />
+                </p:panel>
             <p:panel header="Satisfied with the result?" style="margin-bottom:10px;"> 
                 <h:panelGrid columns="1" style="margin-bottom:10px" cellpadding="5">
 
