--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
@@ -50,7 +50,7 @@
                     <p:selectOneMenu required="true" id="product" value="#{productComponentViewEditManagedBean.productId}" styleClass="form-control">
                         <p:ajax listener="#{productComponentViewEditManagedBean.onProductChange}" update="components" />
                         <f:selectItem itemLabel="Select a product" itemValue="" noSelectionOption="true" />
-                        <f:selectItems value="#{productComponentViewEditManagedBean.products}"  var="product" itemLabel="#{product.productName}"  itemValue="#{product.productId}"/>
+                        <f:selectItems value="#{productComponentViewEditManagedBean.products}"  var="product" itemLabel="ID:#{product.productId} Name:#{product.productName}"  itemValue="#{product.productId}"/>
                     </p:selectOneMenu>
                 </h:panelGrid>
                 <p:separator/>
