--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -22,7 +22,17 @@
             <div class="container" >
                 <h2>View Users</h2>
                 <h:form id="form">
-                    
+
+                    <c:if test ="#{viewUserManagerBean.loginedUser.userType == 'superuser'}">
+                        <h:panelGrid columns="2" cellpadding="5">
+                            <p:outputLabel for="company" value="Company:" />
+                            <h:selectOneMenu id="company" value="#{viewUserManagerBean.selectCompanyId}"  style="width:250px" styleClass="form-control">
+                                <p:ajax listener="#{viewUserManagerBean.onCompanyChange}" update="usersData" />
+                                <f:selectItem itemLabel="Select Company To View Users" itemValue="" noSelectionOption="true" />
+                                <f:selectItems value="#{viewUserManagerBean.companys}" var="company" itemLabel="#{company.name}"  itemValue="#{company.companyId}"/>
+                            </h:selectOneMenu>
+                        </h:panelGrid>
+                    </c:if>
 
                     <p:messages id="messages"  showDetail="true" autoUpdate="true" closable="true" />
                     <p:dataTable id="usersData" var="user" rowKey="#{user.systemUserId}" value="#{viewUserManagerBean.companyUsers}" widgetVar="usersTable"
@@ -57,12 +67,12 @@
                         </p:column>
 
                         <p:column headerText="Update" >
-                            <p:commandButton action="#{viewUserManagerBean.selectUser(user)}" oncomplete="toggleModal();" update=":form:userDetail" value="Update">
+                            <p:commandButton action="#{viewUserManagerBean.selectUser(user)}" oncomplete="toggleModal();" update=":form:userDetail" icon="ui-icon-pencil">
                             </p:commandButton> 
                         </p:column>
 
                         <p:column  headerText="Delete" >
-                            <p:commandButton action="#{viewUserManagerBean.selectUser(user)}" oncomplete="deleteModal();" value="Delete">
+                            <p:commandButton action="#{viewUserManagerBean.selectUser(user)}" oncomplete="deleteModal();" icon="ui-icon-trash">
                             </p:commandButton> 
 
                         </p:column>
