Dont touch my code!- manli

--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -44,17 +44,17 @@
                         <p:dataTable id="rolesData" var="role" rowKey="#{role.userRoleId}" value="#{viewCompanyRoles.roles}" 
                                      paginator="true"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
-                            <p:column headerText="roleName" filterBy="#{role.roleName}" filterMatchMode="contains">
+                            <p:column headerText="Role Name" filterBy="#{role.roleName}" width="200" filterStyle="width: 180px" filterMatchMode="contains">
                                 <h:outputText value="#{role.roleName}" />
                             </p:column>
 
                             <p:column headerText="description">
                                 <h:outputText value="#{role.description}" />
                             </p:column>
-                            <p:column headerText="Update">
+                            <p:column width="50">
                             <p:commandButton action="#{viewCompanyRoles.selectRole(role)}" oncomplete="toggleModal();" update=":roleform:roleDetail" icon="ui-icon-pencil"/>
                             </p:column>
-                            <p:column headerText="Delete">
+                            <p:column width="50">
                             <p:commandButton action="#{viewCompanyRoles.selectRole(role)}" oncomplete="deleteModal();" icon="ui-icon-trash"/>
                             </p:column>
 
