--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -2,47 +2,46 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Home</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-            .ui-layout, .ui-layout-doc, .ui-layout-unit, .ui-layout-wrap, .ui-layout-bd, .ui-layout-hd{
-                border: none;
-            }
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+    <ui:composition template="${root}/templates/templateuser.xhtml">
+        <ui:param name="pageName" value="WMS home" />
 
-        </style>
-    </h:head>
-    <h:body>
-        <h:form id="formMain">
-            <h1>Welcome to WMS system</h1>
+        <ui:define name="more-imports">
+            <ui:insert>
+               
+            </ui:insert>
+        </ui:define>
 
-            <p:layout style="min-width:400px;min-height:1000px; borderless">      
-                <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
-                    <p:menu>
-                        <p:submenu label =" Manage Your Warehouse">
-                            <p:menuitem value="HOME" url="wmsindex.xhtml" />
-                            <p:submenu label="Warehouse" >
-                                <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                                <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+        <ui:define name="left">
+            <h:form id="formMain">
+<!--                <p:layout style="min-width:400px;min-height:1000px; borderless">      -->
+                    <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
+                        <p:menu>
+                            <p:submenu label =" Manage Your Warehouse">
+                                <p:menuitem value="WMS" url="wmsindex.xhtml" />
+                                <p:submenu label="Warehouse" >
+                                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                                </p:submenu>
+                                <p:submenu label="Storage Type" >
+                                    <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
+                                    <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
+                                </p:submenu>
+                                <p:submenu label="Storage Bin" >
+                                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                                </p:submenu>
                             </p:submenu>
-                            <p:submenu label="Storage Type" >
-                                <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                                <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
-                            </p:submenu>
-                            <p:submenu label="Storage Bin" >
-                                <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                                <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                            </p:submenu>
-                        </p:submenu>
-                    </p:menu>
-                </p:layoutUnit>
+                        </p:menu>
+                    </p:layoutUnit>
+<!--                </p:layout>-->
+            </h:form>
+        </ui:define>
 
+        <ui:define name="right">
+<!--            <p:layout>-->
                 <p:layoutUnit position="center">   
                     <p:panel header="Welcome">
 
@@ -62,8 +61,8 @@
 
                     </p:panel>
                 </p:layoutUnit>
-            </p:layout>
+<!--            </p:layout>-->
+        </ui:define>
 
-        </h:form>
-    </h:body>
+    </ui:composition>
 </html>
