changed logo- Manli

--- a/MerlionPortal/MerlionPortal-war/web/logout.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/logout.xhtml
@@ -11,10 +11,7 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
-                <a href="index.xhtml" class="thumbnail">
-                    <img src="img/merlionlogo.png" alt="..."/>
-                </a>
-
+                <img src="img/merlionlogout.png" alt="..."/>
                 <h2>Logged out</h2>
                 <h4>You have successfully logged out</h4>
 
