--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -38,7 +38,7 @@
                     <p:dataTable id="usersData" var="user" rowKey="#{user.systemUserId}" value="#{viewUserManagerBean.companyUsers}" widgetVar="usersTable"
                                  emptyMessage="No users found with given criteria" filteredValue="#{viewUserManagerBean.filteredUsers}"
                                  paginator="true"
-                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
+                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="20,50">
 
                         <f:facet name="header">
                             <p:outputPanel>
